--- a/src/client/components/sections/TopBar.module.css
+++ b/src/client/components/sections/TopBar.module.css
@@ -15,3 +15,7 @@
         top: 64px;
     }
 }
+
+.root {
+    margin: 0px 24px;
+}
